# linkora

./: .gitignore  LICENSE  README-CN.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: AGENT.md  config.md  design-v2.md  design.md  inspect.md  publish-mcp.md
examples/config/: full.yml  minimal.yml  workspace-default.yml  workspace-physics.yml
examples/env/: synapse.env
linkora/: __init__.py  audit.py  config.py  db.py  export.py  extract.py  files.py  filters.py  http.py  index.py  llm.py  loader.py  log.py  mcp.py  metrics.py  mineru.py  papers.py  paths.py  setup.py  sources.py  store.py  topics.py  workspace.py
linkora/cli/: __init__.py  args.py  commands.py  context.py  errors.py  output.py  setup.py
linkora/index/: __init__.py  text.py  vector.py
linkora/ingest/: __init__.py  download.py  matching.py  pipeline.py
linkora/pipeline/: __init__.py  enrich.py  extract.py  ingest.py
linkora/schema/: __init__.py  registry.py  types.py
linkora/sources/: __init__.py  endnote.py  local.py  openalex.py  protocol.py  zotero.py
plans/: cli-refactor-plan.md  comprehensive-type-fix-plan.md  config-design-improvement.md  config-restructuring-plan.md  export-papers-refactor-plan.md  extract-pipeline-redesign.md  extract-refactor-plan.md  faiss_api.md  implementation-plan.md  index-improvement-plan.md  index-paperstore-plan.md  ingest-connection-plan.md  ingest-refactor-implementation-plan.md  linkora-refactor-plan.md  llm-improvement-plan.md  loader-integration-plan.md  loader-redesign-plan.md  mcp-server-refactor-plan.md  metrics-improvement-plan.md  multi-local-paths-plan.md  papers-audit-improvement-plan.md  papers-module-refactor-plan.md  papers-refactor-plan.md  pytest-workflow-plan.md  refactor-roadmap.md  setup-refactor-plan.md  sources-improvement-plan.md  test-plan-integrated.md  topics-paperstore-context-plan.md  topics-refactor-plan.md  topics-type-fix-plan.md  type-check-fix-plan.md  vector-topics-improvement-plan.md
scholaraio/: audit.py  cli.py  cli_legacy.py  config.py  explore.py  export.py  extract.py  filters.py  hash.py  http.py  index.py  llm.py  loader.py  log.py  mcp.py  mcp_server.py  metrics.py  migrate.py  mineru.py  papers.py  setup.py  skills.py  topics.py  vectors.py  workspace.py
scholaraio/cli/: __init__.py  args.py  commands.py  context.py  errors.py  output.py
scholaraio/index/: __init__.py  text.py  vector.py
scholaraio/ingest/: extractor.py  mineru.py  pipeline.py
scholaraio/ingest/metadata/: __main__.py  _abstract.py  _api.py  _cli.py  _extract.py  _models.py  _writer.py
scholaraio/sources/: __init__.py  endnote.py  local.py  openalex.py  protocol.py  zotero.py
scripts/: release_sync.py
tests/: __init__.py  conftest.py  test_cli_bootstrap.py  test_config_loader.py  test_schema_store.py  test_sources.py  test_topics_store.py  test_workspace.py
tests/integration/: test_config_resolution.py  test_dispatcher_multipath.py  test_local_source_multipath.py  test_local_source_resolution.py  test_paper_store.py  test_search_flow.py  test_workspace.py
tests/unit/: test_audit_rules.py  test_filters.py  test_hash.py
